# tabata_app

./: .gitignore  MANIFEST.IN  README.md  app.py  changelog  configuration.txt  install.sh  my_tabata.desktop  pyproject.toml  requirements.txt  setup.cfg  setup.py
assets/: end_cycle.flac
deb_dist/: my-tabata_0.1.4-1.debian.tar.xz  my-tabata_0.1.4-1.dsc  my-tabata_0.1.4-1_source.build  my-tabata_0.1.4-1_source.buildinfo  my-tabata_0.1.4-1_source.changes  my-tabata_0.1.4-2.debian.tar.xz  my-tabata_0.1.4-2.dsc  my-tabata_0.1.4-2_source.build  my-tabata_0.1.4-2_source.buildinfo  my-tabata_0.1.4-2_source.changes  my-tabata_0.1.4-2_source.mentors.upload  my-tabata_0.1.4-3.debian.tar.xz  my-tabata_0.1.4-3.dsc  my-tabata_0.1.4-3_source.buildinfo  my-tabata_0.1.4-3_source.changes  my-tabata_0.1.4-4.debian.tar.xz  my-tabata_0.1.4-4.dsc  my-tabata_0.1.4-4_source.buildinfo  my-tabata_0.1.4-4_source.changes  my-tabata_0.1.4-4_source.mentors.upload
deb_dist/my-tabata-0.1.4/: PKG-INFO  README.md  my_tabata.desktop  pyproject.toml  setup.cfg  setup.py
deb_dist/my-tabata-0.1.4/debian/: changelog  control  copyright  files  rules  watch
deb_dist/my-tabata-0.1.4/my_tabata/: app.py
env/: pyvenv.cfg
my_tabata/: app.py  config.py
