[project]
name = "my-tabata"
version = "0.1.4"
description = "A minimal and practical Tabata Timer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playsound==1.2.2",
    "text-unidecode",
    "ttkbootstrap",
    "typing-extensions",
    "tzdata",
    "urllib3",
    "uvicorn",
    "uvloop; platform_system != 'Windows'",
    "watchdog",
    "watchfiles",
    "websockets",
    "just_playback"
]

[project.scripts]
# Comando = "carpeta.archivo:funcion"
my-tabata = "my_tabata.app:main_func"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["my_tabata*"]

[tool.setuptools.package-data]
my_tabata = ["assets/*", "configuration.txt"]